Fix poor rendering on firefox and narrower windows

--- a/src/common/Navbar.css
+++ b/src/common/Navbar.css
@@ -16,7 +16,7 @@
   border-width: 0.2rem;
   border-color: white;
   width: 100%;
-  height: 3.5rem;
+  height: 4rem;
   top: 0;
 }
 
@@ -26,7 +26,8 @@
   align-items: center;
   color: black;
   width: 15rem;
-  height: 3.5rem;
+  height: 4rem;
+  line-height: 1.1;
 }
 
 .o-single-option:hover {
