--- a/src/sleep/styles/TimeInput.css
+++ b/src/sleep/styles/TimeInput.css
@@ -28,8 +28,8 @@
 .o-reset-btn {
   position: relative;
   width: 15rem;
-  height: 100%;
-  padding: 0.5rem;
+  height: 2.2rem;
+  padding: 0.2rem;
   margin: 0.5rem 0;
   border-radius: 0.5rem;
 }
